Perkin-UAT/force-app/main/default/objects/Service_Order__c/Service_Order__c.object-meta.xml
<CustomObject>
    <description>Service Order</description>
    <label>Service Order</label>
    <nameField>
        <label>Service Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>