Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <label>Billable Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>