Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Billable_Travel__c.field-meta.xml
<CustomField>
    <fullName>Billable_Travel__c</fullName>
    <label>Billable Travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>