Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>