Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Non_Billable_Travel__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Travel__c</fullName>
    <label>Non Billable Travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>