Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Objects__c.field-meta.xml
<CustomField>
    <fullName>Objects__c</fullName>
    <label>Objects</label>
    <length>200</length>
    <type>Text</type>
</CustomField>