Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Total_Days_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Sold__c</fullName>
    <label>Total Days Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>