Perkin-UAT/force-app/main/default/objects/Service_Order__c/fields/Total_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Hours__c</fullName>
    <label>Total Project Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>